<resources>
    <string name="app_name">Tập Đoàn VNPT</string>
    <string name="app_name_tap_doan">QLVBDH Tập Đoàn</string>
    <string name="home">Trang chủ</string>
    <string name="PROCESSING_REQUEST">Đang xử lý yêu cầu</string>
    <string name="DOWNLOADING_REQUEST">Đang tải về! Vui lòng đợi...</string>
    <string name="DOWNLOADING">Vui lòng đợi...</string>
    <string name="LOGOUT_REQUEST">Đang đăng xuất! Vui lòng đợi...</string>
    <string name="UPDATING_REQUEST">Đang cập nhật dữ liệu!</string>
    <string name="LOGINING_REQUEST">Đang đăng nhập hệ thống</string>
    <string name="PLEASE_WAIT">Vui lòng đợi trong giây lát</string>
    <string name="UPDATING_DATA">Đang cập nhật thông tin</string>
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="default_home_title">Thiết lập mặc định</string>
    <string name="profile_title">Thông tin cá nhân</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="ghiNhoTaiKhoan">Ghi nhớ tài khoản</string>
    <string name="dangKy">Đăng ký</string>
    <string name="USERNAME_REQUIRED">Bạn chưa nhập Username</string>
    <string name="PASSWORD_REQUIRED">Bạn chưa nhập Mật khẩu</string>
    <string name="LOGIN_INVALID">Thông tin đăng nhập không chính xác</string>
    <string name="OLD_PASSWORD_REQUIRED">Bạn chưa nhập Mật khẩu cũ</string>
    <string name="NEW_PASSWORD_REQUIRED">Bạn chưa nhập Mật khẩu mới</string>
    <string name="CONFIRM_PASSWORD_REQUIRED">Bạn cần Xác nhận mật khẩu mới</string>
    <string name="USERNAME_INVALID_LENGTH">Username chỉ được nhập không quá 30 ký tự</string>
    <string name="PASSWORD_INVALID_LENGTH">Password ít nhất phải dài 8 ký tự</string>
    <string name="PASSWORD_INVALID_STRENGTH">Password phải bao gồm số, chữ cái thường, chữ cái hoa và ký tự đặc biệt</string>
    <string name="USERNAME_INVALID_STRENGTH">Username không được chứa ký tự đặc biệt</string>
    <string name="CONFIRM_PASSWORD_MISMACTH">Xác nhận mật khẩu không chính xác</string>
    <string name="LOGIN_TITLE_ERROR">LỖI ĐĂNG NHẬP</string>
    <string name="CHANGE_PASSWORD_TITLE_ERROR">LỖI ĐỔI MẬT KHẨU</string>
    <string name="CHANGE_PASSWORD_ERROR">Thông tin đổi mật khẩu không chính xác</string>
    <string name="DUPLICATE_PASSWORD_ERROR">Mật khẩu mới trùng với mật khẩu cũ</string>
    <string name="CHANGE_PASSWORD_MESSAGE_SUCCESS">Đổi mật khẩu thành công</string>
    <string name="TITLE_SUCCESS">THÀNH CÔNG</string>
    <string name="TITLE_CONFIRM">XÁC NHẬN</string>
    <string name="NETWORK_TITLE_ERROR">LỖI MẠNG</string>
    <string name="DOWNLOAD_TITLE_ERROR">LỖI TẢI FILE</string>
    <string name="TITLE_READED_ERROR">LỖI ĐÁNH DẤU</string>
    <string name="LOGOUT_TITLE_ERROR">LỖI ĐĂNG XUẤT</string>
    <string name="GET_INFO_TITLE_ERROR">LỖI LẤY THÔNG TIN</string>
    <string name="CHANGE_DOC_TITLE_ERROR">LỖI CHUYỂN VĂN BẢN</string>
    <string name="RECOVER_DOC_TITLE_ERROR">LỖI LẤY LẠI VĂN BẢN</string>
    <string name="MARK_DOC_TITLE_ERROR">LỖI ĐÁNH DẤU VĂN BẢN</string>
    <string name="MARK_SIGN_TITLE_ERROR">LỖI KÝ VĂN BẢN</string>
    <string name="COMMENT_DOC_TITLE_ERROR">LỖI GỬI Ý KIẾN</string>
    <string name="TITLE_NOTIFICATION">THÔNG BÁO</string>
    <string name="NOT_PERSON_PROCESS">Chưa chọn người nhận xử lý chính</string>
    <string name="NOT_PERSON">Chưa chọn đơn vị/cá nhân nhận văn bản</string>
    <string name="NOT_PERSON_GROUP">Chưa chọn đơn vị/cá nhân nhận theo nhóm</string>
    <string name="NOT_NOTE_SEND">Chưa nhập ghi chú chuyển văn bản</string>
    <string name="NOT_CONTENT_SEND">Chưa nhập nội dung xử lý</string>
    <string name="NOT_TYPE_CHANGE">Chưa chọn hình thức chuyển văn bản</string>
    <string name="NOT_SUPPORT_TYPE_CHANGE">Văn bản chưa được hỗ trợ hình thức chuyển</string>
    <string name="MARK_READ_SUCCESS">Đánh dấu đã đọc thành công</string>
    <string name="NOT_PERSON_NOTIFY">Chưa chọn người nhận thông báo</string>
    <string name="NOT_PERSON_DIRECT">Chưa chọn đơn vị/cá nhân nhận trực tiếp</string>
    <string name="CHANGE_DOC_FAIL">Chuyển văn bản thất bại</string>
    <string name="CHANGED_DOC">Văn bản đã được chuyển xử lý trước đó</string>
    <string name="CHANGE_DOC_SUCCESS">Chuyển văn bản thành công</string>
    <string name="READED_FAIL">Không thể đánh dấu đã đọc</string>
    <string name="UNCHECK_READED">Chưa chọn thông báo nào</string>
    <string name="NO_INTERNET_ERROR">Không có kết nối Mạng\nVui lòng kết nối và thử lại</string>
    <string name="DOWNLOAD_FILE_ERROR">Không thể tải file về thiết bị</string>
    <string name="DOWNLOAD_FILE_SUCCESS">Tải file thành công</string>
    <string name="FUNCTION_NO_SUPPORT_INFO">Chức năng đang được phát triển</string>
    <string name="SCHEDULE_NO_SUPPORT_INFO">Không hiển thị được lịch họp</string>
    <string name="REPORT_TYPE_REQUIRED">Chưa chọn loại báo cáo cần xem</string>
    <string name="CLOSE_BUTTON">Đóng lại</string>
    <string name="ACCEPT_BUTTON">Đồng ý</string>
    <string name="NO_DATA">Không có dữ liệu văn bản</string>
    <string name="NO_REPLY">Không có phản hồi nào</string>
    <string name="NO_NOTIFY">Bạn không có thông báo nào</string>
    <string name="NO_CONTACT">Không tìm thấy danh bạ</string>
    <string name="WAITING_FOR_PROGRESSING_MENU">Văn bản chờ xử lý</string>
    <string name="DOC_PROCESSED_MENU">Văn bản đã xử lý</string>
    <string name="DOC_EXPRIED_MENU">Văn bản đến hạn/quá hạn</string>
    <string name="DOC_NOTIFICATION_MENU">Văn bản Xem để biết</string>
    <string name="DOC_MARK_MENU">Văn bản đánh dấu</string>
    <string name="HOME_MENU">Trang chủ</string>
    <string name="DOCUMENT_MENU">Quản lý văn bản</string>
    <string name="SETTING_MENU">Cài đặt hệ thống</string>
    <string name="CONTACT_MENU">Danh bạ</string>
    <string name="SCHEDULE_MENU">Lịch Công tác lãnh đạo</string>
    <string name="HOME_SCHEDULE_MENU">Lịch Công tác\nLãnh đạo</string>
    <string name="NEWS_MENU">Trang tin tức</string>
    <string name="REPORT_EXT_MENU">Báo cáo</string>
    <string name="WORK_MENU">Quản lý công việc</string>
    <string name="CHIDAO_MENU">Thông tin điều hành</string>
    <string name="CHIDAO_GUI_MENU">Thông tin điều hành gửi</string>
    <string name="CHIDAO_NHAN_MENU">Thông tin điều hành nhận</string>
    <string name="REPORT_MENU">Báo cáo thống kê</string>
    <string name="DEFAULT_HOME_MENU">Thiết lập mặc định</string>
    <string name="LOG_OUT_MENU">Đăng xuất</string>
    <string name="CHANGE_PASSWORD_MENU">Đổi mật khẩu</string>
    <string name="REPORT_TEMPLATE">Template báo cáo</string>
    <string name="NOTIFY_MENU">Thông báo</string>
    <string name="DETAIL_SCHEDULE_TITLE">Chi tiết lịch họp</string>
    <string name="DETAIL_SCHEDULE_BUSSINESS_TITLE">Chi tiết lịch công tác</string>
    <string name="PROFILE_MENU">Thông tin cá nhân</string>
    <string name="CONTACT_DETAIL">Thông tin danh bạ</string>
    <string name="DOCUMENT_DIAGRAM">Sơ đồ luồng văn bản</string>
    <string name="DOCUMENT_HISTORY">Lịch sử xử lý văn bản</string>
    <string name="EXCHANGE_HANDLES">Trao đổi thông tin</string>
    <string name="HINT_SEARCH_CONTACT"><font size="14"> Nhập tên(cá nhân/đơn vị), số điện thoại, email</font></string>
    <string name="HINT_SEARCH"><font size="14"> Tìm kiếm</font></string>
    <string name="BTN_SEARCH">Tìm kiếm</string>
    <string name="BTN_REFRESH">Tìm mới</string>
    <string name="BTN_CANCEL">Hủy bỏ</string>
    <string name="HINT_QUICK_SEARCH"><font size="14"> Tìm kiếm nhanh</font></string>
    <string name="SEARCH_LABEL">Tìm</string>
    <string name="STATUS_CONTACT_ACTIVE_LABEL">Được phép sử dụng</string>
    <string name="STATUS_CONTACT_DEACTIVE_LABEL">Không được phép sử dụng</string>
    <string name="IS_READ">Đã xem</string>
    <string name="IS_NOT_READ">Chưa xem</string>
    <string name="REMEMBER_LABEL">Ghi nhớ tài khoản</string>
    <string name="UPDATE_BTN_LABEL">Cập nhật</string>
    <string name="LOGIN_BTN_LABEL">Đăng nhập</string>
    <string name="OLD_PASSWORD_LABEL">Mật khẩu cũ</string>
    <string name="NEW_PASSWORD_LABEL">Mật khẩu mới</string>
    <string name="CONFIRM_PASSWORD_LABEL">Xác nhận mật khẩu mới</string>
    <string name="DOCUMENT_RECOVERED_SUCCESS">Lấy lại văn bản thành công</string>
    <string name="DOCUMENT_RECOVERED_FAIL">Lấy lại văn bản không thành công</string>
    <string name="DOCUMENT_RECOVERED_INVALID">Văn bản đã được xem, không thể lấy lại được</string>
    <string name="MARKED_SUCCESS">Đánh dấu văn bản thành công</string>
    <string name="NEW_NOTIFICATION">Bạn có 1 thông báo mới</string>
    <string name="NOT_MARKED_SUCCESS">Văn bản đã được bỏ đánh dấu</string>
    <string name="MARKED_FAIL">Đánh dấu văn bản thất bại</string>
    <string name="NOT_MARKED_FAIL">Bỏ đánh dấu văn bản thất bại</string>
    <string name="DOCUMENT_MARKED_FAIL">Đánh dấu văn bản không thành công</string>
    <string name="DOCUMENT_SIGN_FAIL">Không thể thực hiện ký văn bản này</string>
    <string name="NOT_FILE_SIGN">Không có file để ký</string>
    <string name="FILE_ERROR_SIGN">Không thể ký được văn bản này</string>
    <string name="DOCUMENT_SIGN_WAITING">Quá trình ký đang được thực hiện\nThông báo sẽ được gửi về trong ít phút</string>
    <string name="DOCUMENT_SIGN_SUCCES">Ký thành công!</string>
    <string name="NO_COMMENT_DOC_SEND">Không thể cho ý kiến đối với văn bản đi</string>
    <string name="NOT_COMMENT">Chưa nhập ý kiến cho văn bản</string>
    <string name="COMMENT_SUCCESS">Gửi ý kiến thành công</string>
    <string name="COMMENT_ERROR">Không thể cho ý kiến đối với văn bản này</string>
    <string name="DETAIL_DOCUMENT_LABEL">Chi tiết văn bản</string>
    <string name="SEND_COMMENT_LABEL">Gửi ý kiến</string>
    <string name="SEND_DOCUMENT_LABEL">Chuyển văn bản</string>
    <string name="SEARCH_DOCUMENT_LABEL">Tra cứu văn bản</string>
    <string name="ADVANCE_SEARCH_DOCUMENT_LABEL">Tìm kiếm nâng cao</string>
    <string name="UNIT_LOG">Đơn vị: </string>
    <string name="HUY_BTN_LABEL">Hủy</string>
    <string name="NGAY_BH_TITLE_ERROR">LỖI NGÀY BAN HÀNH</string>
    <string name="NGAY_BH_ERROR">Khoảng thời gian tìm kiếm của ngày ban hành không hợp lệ</string>
    <string name="NGAY_ST_ERROR">Khoảng thời gian tìm kiếm của ngày soạn thảo không hợp lệ</string>
    <string name="HAN_XL_ERROR">Khoảng thời gian tìm kiếm của hạn xử lý không hợp lệ</string>
    <string name="NGAY_ST_TITLE_ERROR">LỖI NGÀY SOẠN THẢO</string>
    <string name="HAN_XL_TITLE_ERROR">LỖI HẠN XỬ LÝ</string>
    <string name="RANGE_DATE_ERROR">Ngày bắt đầu phải nhỏ hơn ngày kết thúc</string>
    <string name="SEND_NOTE">Ghi chú...</string>
    <string name="SEND_CONTENT">Nội dung xử lý</string>
    <string name="SEND_COMMENT">Nhập ý kiến muốn gửi tại đây</string>
    <string name="NO_COMMENT">Không có ý kiến xử lý nào</string>
    <string name="DEFAULT_TYPE_DOC">Chọn hình thức văn bản</string>
    <string name="DEFAULT_FIELD_DOC">Chọn lĩnh vực của văn bản</string>
    <string name="DEFAULT_PRIORITY_DOC">Chọn độ khẩn của văn bản</string>
    <string name="DEFAULT_TYPE_CHANGE_DOC">Chọn hình thức chuyển văn bản</string>
    <string name="NO_TITLE_NAME">Thông báo không có tiêu đề</string>
    <string name="NO_DATE">Chưa cập nhật ngày</string>
    <string name="NO_TIME">Chưa cập nhật giờ</string>
    <string name="SEARCH_LABEL_BTN">Tìm kiếm</string>
    <string name="ADD_LABEL_BTN">Thêm mới</string>
    <string name="SAVE_LABEL_BTN">Lưu lại</string>
    <string name="tv_file_dinh_kem">Tệp tin đính kèm: </string>
    <string name="tv_from">Từ ngày</string>
    <string name="tv_to">Đến ngày</string>
    <string name="tv_tieude">Tiêu đề</string>
    <string name="tv_tieude_chidao">Tiêu đề: </string>
    <string name="tv_noidung_chidao">Nội dung: </string>
    <string name="tv_date_receive">Ngày nhận: </string>
    <string name="tv_list_person">Danh sách người nhận: </string>
    <string name="NO_DATA_CHIDAO">Không có dữ liệu thông tin điều hành</string>
</resources>