<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.ChiDaoFragment"
    android:background="@color/md_grey_200">

    <LinearLayout
        android:id="@+id/layoutDisplay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/background_border_1dp"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:id="@+id/tv_from"
                        android:hint="@string/tv_from"
                        android:fontFamily="@font/arial"
                        android:textColor="@color/md_black"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:textSize="14dp"
                        android:gravity="center_vertical"
                        android:drawableRight="@drawable/ic_date_chidao"
                        android:background="@drawable/background_border_radius"
                        android:textColorHint="@color/md_grey_500"/>
                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"/>
                    <EditText
                        android:id="@+id/tv_to"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:hint="@string/tv_to"
                        android:textSize="14dp"
                        android:fontFamily="@font/arial"
                        android:textColor="@color/md_black"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:drawableRight="@drawable/ic_date_chidao"
                        android:gravity="center_vertical"
                        android:background="@drawable/background_border_radius"
                        android:textColorHint="@color/md_grey_500"/>
                </LinearLayout>
                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_tieude"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:hint="@string/tv_tieude"
                    android:textColor="@color/md_black"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textSize="14dp"
                    android:fontFamily="@font/arial"
                    android:gravity="center_vertical"
                    android:background="@drawable/background_border_radius"
                    android:textColorHint="@color/md_grey_500"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:id="@+id/btnSearch"
                        android:text="@string/SEARCH_LABEL_BTN"
                        android:fontFamily="@font/arial"
                        android:textColor="@color/md_white"
                        android:layout_gravity="center_vertical"
                        android:textAllCaps="false"
                        android:background="@drawable/border_btn_search"/>
                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:id="@+id/btnAdd"
                        android:fontFamily="@font/arial"
                        android:text="@string/ADD_LABEL_BTN"
                        android:textColor="@color/md_white"
                        android:layout_gravity="center_vertical"
                        android:textAllCaps="false"
                        android:background="@drawable/border_btn_refresh"/>
                </LinearLayout>
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/txtNoData"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/md_black"
            android:fontFamily="@font/arial"
            android:textAlignment="center"
            android:textSize="16dp"
            android:text="@string/NO_DATA_CHIDAO"/>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <android.support.v7.widget.RecyclerView
                android:id="@id/rcvDanhSach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scrollbars="vertical" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</FrameLayout>