<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DetailChiDaoFragment"
    android:background="@color/md_grey_100">

    <LinearLayout
        android:id="@+id/layoutDisplay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_border_1dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tieude_chidao"
                    android:textColor="@color/md_black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" *"
                    android:textColor="@color/md_red_500"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/tv_tieude"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/md_black"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_border_radius"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_noidung_chidao"
                android:textColor="@color/md_black"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"/>
            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/tv_noidung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:maxLines="8"
                android:minLines="8"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_border_radius"/>
            <TextView
                android:id="@+id/tv_date_label"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date_receive"
                android:textColor="@color/md_black"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/tv_from"
                android:textColor="@color/md_black"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="12/04/2018"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/ic_date_chidao"
                android:background="@drawable/background_border_radius"
                android:textColorHint="@color/md_grey_500"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_filedinhkem_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_file_dinh_kem"
                    android:textColor="@color/md_black"
                    android:layout_gravity="bottom"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/ic_file_attach"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlue"
                    android:layout_gravity="bottom"
                    android:text="Ban hanh quy che CNTT"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_list_person"
                    android:textColor="@color/md_black"
                    android:layout_gravity="bottom"/>
                <LinearLayout
                    android:id="@+id/layPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="3"
                    android:id="@+id/btnSearch"
                    android:text="@string/SAVE_LABEL_BTN"
                    android:textColor="@color/md_white"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"
                    android:background="@drawable/border_btn_search"/>
                <View
                    android:layout_width="5dp"
                    android:layout_height="5dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="3"
                    android:id="@+id/btnAdd"
                    android:text="@string/CLOSE_BUTTON"
                    android:textColor="@color/md_white"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"
                    android:background="@drawable/border_btn_refresh"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>